--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,4 @@
-@media(min-width: 1073px) {
+/*@media(min-width: 1073px) {
    .grid-item {
     flex-basis: 31.33%;
   }
@@ -15,4 +15,5 @@
   .grid-item {
     flex-basis: 98%;
   }
-}
+}*/
+
