--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,9 @@
     padding: 1rem;
   }
 }
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 30px;
+}
